<resources>
    <string name="app_name">ChallengeApp</string>

    <string name="login_fragment_button">Login</string>
    <string name="register_fragment_button">Register</string>
    <string name="welcome_fragment">Welcome!</string>
    <string name="please_log_in_or_register_fragment">Please log in or register</string>
    <string name="please_register_for_an_account_fragment">Please register for an account</string>
    <string name="login_successfull_fragment">Login Successfull!</string>
    <string name="username_fragment">Username</string>
    <string name="password_fragment">Password</string>
    <string name="email_fragment">email</string>
    <string name="first_name_fragment">Firstname</string>
    <string name="last_name_fragment">Lastname</string>
    <string name="login_success_fragment">Login Successful</string>
    <string name="logout_fragment">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
